# Focuser

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md
.github/workflows/: ci.yml  release.yml
crates/focuser-cli/: Cargo.toml
crates/focuser-cli/src/: client.rs  main.rs
crates/focuser-common/: Cargo.toml
crates/focuser-common/src/: allowance.rs  block.rs  browser.rs  error.rs  extension.rs  ipc.rs  lib.rs  platform.rs  pomodoro.rs  schedule.rs  types.rs
crates/focuser-core/: Cargo.toml
crates/focuser-core/src/: allowance.rs  engine.rs  lib.rs  pomodoro.rs
crates/focuser-core/src/db/: allowance.rs  migrations.rs  mod.rs  pomodoro.rs
crates/focuser-native/: Cargo.toml
crates/focuser-native/src/: ipc_client.rs  main.rs
crates/focuser-service/: Cargo.toml
crates/focuser-service/src/: enforcement.rs  hosts.rs  ipc.rs  main.rs  service.rs
crates/focuser-service/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/focuser-ui/: Cargo.toml  tauri.conf.json
crates/focuser-ui/capabilities/: default.json
crates/focuser-ui/nsis/: installer-hooks.nsi
crates/focuser-ui/src/: api.rs  blocker.rs  commands.rs  main.rs
crates/focuser-ui/ui/: app.js  charts.js  index.html  premade-lists.json  styles.css
extension/: background.js  blocked.css  blocked.html  blocked.js  build.py  content-block.js  content-early.js  content-hide.css  manifest.json  messages.json  popup.css  popup.html  popup.js
