[package]
name = "focuser-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Focuser"

[dependencies]
focuser-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
