[package]
name = "focuser-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, errors, and platform abstractions for Focuser"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
glob-match = { workspace = true }
