[package]
name = "focuser-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rules engine, database, and scheduling logic for Focuser"

[dependencies]
focuser-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
glob-match = { workspace = true }

[dev-dependencies]
tempfile = "3"
