[package]
name = "focuser-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System service/daemon for Focuser — enforces blocking rules"

[dependencies]
focuser-common = { workspace = true }
focuser-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }
winreg = "0.55"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs"] }
